// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterEventHandlers should return an array of key/value pairs with valid event handlers 1`] = `
Array [
  Array [
    "onTestEvent",
    [Function],
  ],
]
`;

exports[`filterHtmlAttributes should return an array of key/value pairs with valid HTML attributes 1`] = `
Array [
  Array [
    "testFalse",
    false,
  ],
  Array [
    "testTrue",
    true,
  ],
  Array [
    "testString",
    "test-string",
  ],
  Array [
    "testNumber",
    12345,
  ],
]
`;

exports[`filterJsxProperties should return an array of key/value pairs with valid JSX properties 1`] = `
Array [
  Array [
    "testFalse",
    false,
  ],
  Array [
    "testTrue",
    true,
  ],
  Array [
    "testString",
    "test-string",
  ],
  Array [
    "testNumber",
    12345,
  ],
  Array [
    "testArray",
    Array [
      1,
      2,
      3,
    ],
  ],
  Array [
    "testObject",
    Object {
      "foo": "bar",
    },
  ],
  Array [
    "testFunction",
    [Function],
  ],
]
`;
